# seagull

./: .eslintrc.json  .gitignore  .swcrc  Cargo.toml  README.md  __esbuild.ts  diesel.toml  go.mod  go.sum  import-map.json  larry.mjs  lobster  package-lock.json  package.json  relay.config.json  snowpack.config.mjs  tsconfig.json  upload.js  web-test-runner.config.js  wrangler.toml
app/: App.tsx  bundle.tsx  index.tsx  other.module.css  relay.ts
app/__generated__/: AppQuery.graphql.ts
components/: App.test.tsx  index.tsx
config/: deno.tsconfig.json  snowpack.config.mjs  wrangler.toml
esbuild/: main.go
esbuild/cf/: client.go  upload.go  wrangler_toml.go
esbuild/config/: config.go
esbuild/console/: console.go
esbuild/kv/: client.go  metadata.go  upload.go
esbuild/plugins/: css.go  hash.go  relay.go
graphql/: schema.gql
migrations/2022-06-21-010127_create_posts/: up.sql
plugins/snowpack/: relay.plugin.cjs  relay.plugin.js
public/: index.html
react/: App.test.tsx  App.tsx  index.tsx
scripts/: commands.mjs  lib.mjs  main.mjs  package.json  script.mjs
src/: content_type.rs  context.rs  error.rs  etag.rs  handler.rs  main.rs  message.rs  result.rs
types/: static.d.ts  types.d.ts
worker/: graphql.ts  handlers.ts  html.tsx  htmlTemplate.tsx  index.html.tsx  index.ts  index.tsx  package.json
worker/entry/: index-csr.tsx  ssr.tsx
worker/html/: react.tsx
